build and other bash files moved to etc folder.